crates/service/tests/diagnostics/snapshots/features__diagnostics__table_type__overflow.snap
---
source: crates/service/tests/diagnostics/table_type.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 24
        },
        "end": {
          "line": 2,
          "character": 34
        }
      },
      "severity": 1,
      "code": "table-type",
      "source": "wat",
      "message": "table limit can't be greater than 4294967295"
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 35
        },
        "end": {
          "line": 2,
          "character": 58
        }
      },
      "severity": 1,
      "code": "table-type",
      "source": "wat",
      "message": "table limit can't be greater than 4294967295"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 39
        },
        "end": {
          "line": 3,
          "character": 62
        }
      },
      "severity": 1,
      "code": "table-type",
      "source": "wat",
      "message": "table limit can't be greater than 18446744073709551615"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 9
        },
        "end": {
          "line": 5,
          "character": 19
        }
      },
      "severity": 1,
      "code": "table-type",
      "source": "wat",
      "message": "table limit can't be greater than 4294967295"
    },
    {
      "range": {
        "start": {
          "line": 5,
          "character": 20
        },
        "end": {
          "line": 5,
          "character": 43
        }
      },
      "severity": 1,
      "code": "table-type",
      "source": "wat",
      "message": "table limit can't be greater than 4294967295"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 24
        },
        "end": {
          "line": 6,
          "character": 47
        }
      },
      "severity": 1,
      "code": "table-type",
      "source": "wat",
      "message": "table limit can't be greater than 18446744073709551615"
    }
  ]
}
